--- a/cloudapp/src/main.scss
+++ b/cloudapp/src/main.scss
@@ -7,5 +7,10 @@
 }
 
 @mixin global-styles {
-    /* Add global styles here */
+    
 }
+/*
+TODO: JJEG:
+Refused to load the stylesheet 'https://ux.proquest.com//' because it violates the following Content Security Policy directive: "style-src 'self' 'unsafe-inline' fonts.googleapis.com". Note that 'style-src-elem' was not explicitly set, so 'style-src' is used as a fallback.
+@import url('https://ux.proquest.com//#/components#feedback');
+*/
