--- a/cloudapp/src/app/external-localization/external-localization.component.html
+++ b/cloudapp/src/app/external-localization/external-localization.component.html
@@ -1,19 +1,30 @@
 <app-topmenu></app-topmenu>
 <p>Use the links following the titles below to search for the material externally </p>
-<div *ngIf="settings.items.length>0 else noEntities">
-  <div [ngClass]="'table'">
-    <div [ngClass]="'table-row'" *ngFor="let netpunkEntry of netpunktEntries">
-      <p [ngClass]="'table-cell'">{{netpunkEntry.getEntryNo()}}</p>
-      <p [ngClass]="'table-cell'" sty>{{netpunkEntry.title | truncate : 20}}</p>
-      <mat-list *ngFor="let item of settings.items">
-        <mat-list-item>
-          <a *ngIf="item.searchCriteria=='TITLE'" target="netpunkt" href="{{item.partOfUrlBeforeSearchCriteria}}+{{netpunkEntry.title}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a><br>
-          <a *ngIf="item.searchCriteria=='ISBN'" target="netpunkt" href="{{item.partOfUrlBeforeSearchCriteria}}+{{netpunkEntry.isbn}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a><br>
-          <a *ngIf="item.searchCriteria=='MMS_ID'" target="netpunkt" href="{{item.partOfUrlBeforeSearchCriteria}}+{{netpunkEntry.mms_id}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a><br>
-        </mat-list-item>
-      </mat-list>
+<div [ngClass]="'table'">
+  <div [ngClass]="'table-row'" *ngFor="let attributesFromAlmaEntry of attributesFromAlmaArray">
+    <!--      <div [ngClass]="'table-row'">-->
+    <p [ngClass]="'table-cell'">{{attributesFromAlmaEntry.getEntryNo()}}</p>
+    <p [ngClass]="'table-cell'" sty>{{attributesFromAlmaEntry.title | truncate : 20}}</p>
+<!--          <div [ngClass]="'table-row'">-->
+<!--            <div [ngClass]="'table-cell'"></div>-->
+    <div [ngClass]="'table-cell'">
+            <span *ngFor="let item of settings.items">
+              <a *ngIf="item.searchCriteria=='1'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{attributesFromAlmaEntry.isbn}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
+              <a *ngIf="item.searchCriteria=='2'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{attributesFromAlmaEntry.title}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
+              <a *ngIf="item.searchCriteria=='3'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{attributesFromAlmaEntry.mms_id}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
+              <a *ngIf="item.searchCriteria=='4'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{attributesFromAlmaEntry.author}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
+              <br>
+            </span>
+      <!--          <mat-list *ngFor="let item of settings.items">-->
+      <!--            <mat-list-item>-->
+      <!--            </mat-list-item>-->
+      <!--          </mat-list>-->
+
     </div>
+    <!--      </div>-->
   </div>
+</div>
+<div *ngIf="attributesFromAlmaArray.length>0 else noEntities">
 </div>
 
 <ng-template #noEntities>
