--- a/cloudapp/src/app/settings-dialog/settings-dialog.component.html
+++ b/cloudapp/src/app/settings-dialog/settings-dialog.component.html
@@ -1,34 +1,42 @@
 <h1 mat-dialog-title>Create new external search link</h1>
+
 <div mat-dialog-content>
-    <p><b>Here you can create an external search link. The format is:</b> [First part of link]<b>[search criteria]</b>[second part of link(optional)]  </p>
-    <mat-divider></mat-divider><br>
-    <h2>Example: </h2>
-    <p>http://test.netpunkt.dk/search/work?search_block_form=term.default+adj+%22<b>B%C3%B8rnekultur%20-%20et%20begreb%20i%20bev%C3%A6gelse%20/</b>%22&page_id=danbib-search </p>
-    <p>First part of link: <b>http://test.netpunkt.dk/search/work?search_block_form=term.default+adj++%22</b> </p>
-    <p>Search criteria: <b>Title</b> </p>
-    <p>Second part of link: <b>%22&page_id=danbib-search</b> </p>
-    <mat-divider></mat-divider>
-    <mat-form-field>
+    <mat-icon class="info-icon" (click)="toggleShowExample()" color="primary">info</mat-icon>
+    <div *ngIf="showExample">
+        <p><b>Here you can create an external search link. The format is:</b> [First part of link]<b>[search criteria]</b>[second part of link(optional)]  </p>
+        <mat-divider></mat-divider><br>
+        <h2>Example: </h2>
+        <p>http://test.netpunkt.dk/search/work?search_block_form=term.default+adj+%22<b>B%C3%B8rnekultur%20-%20et%20begreb%20i%20bev%C3%A6gelse%20/</b>%22&page_id=danbib-search </p>
+        <p>First part of link: <b>http://test.netpunkt.dk/search/work?search_block_form=term.default+adj++%22</b> </p>
+        <p>Search criteria: <b>Title</b> </p>
+        <p>Second part of link: <b>%22&page_id=danbib-search</b> </p>
+        <mat-divider></mat-divider>
+    </div>
+    <br *ngIf="!showExample">
+
+    <mat-form-field  id="linkName">
         <mat-label>Name of link</mat-label>
-        <input matInput [(ngModel)]="data.linkName" (change)="onChange()">
+        <input matInput required [(ngModel)]="data.linkName" (change)="onChange()" [maxLength]="20">
     </mat-form-field><br>
-    <label class="example-margin">Search Criteria</label><br>
+    <label class="example-margin">Search Criteria *</label><br>
     <mat-radio-group [(ngModel)]="data.searchCriteria" (change)="onChange()">
-        <mat-radio-button class="settings-control" value="None">None</mat-radio-button><br>
-        <mat-radio-button class="settings-control" value="ISBN">Isbn</mat-radio-button><br>
-        <mat-radio-button class="settings-control" value="TITLE">Title</mat-radio-button><br>
-        <mat-radio-button class="settings-control" value="MMS_ID">MmsId</mat-radio-button><br>
+<!--        <mat-radio-button class="settings-control" value="0">None</mat-radio-button><br>-->
+        <mat-radio-button class="settings-control" value="1">Isbn</mat-radio-button><br>
+        <mat-radio-button class="settings-control" value="2">Title</mat-radio-button><br>
+        <mat-radio-button class="settings-control" value="3">MmsId</mat-radio-button><br>
+        <mat-radio-button class="settings-control" value="4">Author</mat-radio-button><br>
     </mat-radio-group>
-    <mat-form-field>
+    <mat-form-field class="linkPart">
         <mat-label>First part of link</mat-label>
-        <input matInput [(ngModel)]="data.partOfUrlBeforeSearchCriteria" (change)="onChange()">
+        <input matInput required [(ngModel)]="data.partOfUrlBeforeSearchCriteria" (change)="onChange()">
     </mat-form-field><br>
-    <mat-form-field>
+    <mat-form-field class="linkPart">
         <mat-label>Second part of link</mat-label>
         <input matInput [(ngModel)]="data.partOfUrlAfterSearchCriteria"  (change)="onChange()">
     </mat-form-field>
 </div>
+<a *ngIf="readyForSaving != '' && this.data.searchCriteria>0" href="{{testlink}}" target="externalLocalization" >Test link</a>
 <div mat-dialog-actions>
     <button mat-button (click)="onCloseClick()">Close</button>
-    <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Ok</button>
+    <button mat-button [mat-dialog-close]="data" [disabled]="!readyForSaving">Ok</button>
 </div>
