--- a/cloudapp/src/app/settings/settings.component.html
+++ b/cloudapp/src/app/settings/settings.component.html
@@ -10,89 +10,24 @@
 
 <ng-template #loaded>
   <h2 class="subheading-1">External localization settings</h2>
-  <p>This is the settings for adding, editing and removing localisation-links</p>
-<!--
-  <p>settings{{settings}}</p>
-  <p>items{{settings.items}}</p>
-  <button class="btn btn-default" type="button">
-    <span aria-hidden="true" class="glyphicon glyphicon-star"></span> Star
-  </button>
-  <button mat-raised-button (click)="openDialog()">Add link</button>
--->
-<!--  <div *ngIf="!settings || settings.items.length>0 else noItems">-->
+  <span></span>
+<!--  <p>This is the settings for adding, editing and removing localisation-links</p> TODO: for future use, if additional settings are added -->
+  <div *ngIf="!settings || settings.items.length>0 else noItems">
     <mat-list *ngFor="let item of settings.items">
       <mat-list-item>
-        <mat-icon matListIcon>edit</mat-icon>
+<!--        <mat-icon matListIcon>edit</mat-icon>-->
         <span>{{item.linkName}}</span>
-<!-- Exlibris way. Fungerer ikke       <i class="uxf-icon uxf-close eca-button" (click)="remove(item)">delete</i>-->
+<!--  TODO: JJEG ExLibris Way - virker ikke.       <i class="uxf-icon uxf-close eca-button" (click)="remove(item)">delete</i>-->
         <mat-icon matListIcon (click)="remove(item)">delete</mat-icon>
       </mat-list-item>
     </mat-list>
-<!--  </div>-->
+  </div>
+
   <ng-template #noItems>
     <div id="emptyList">
-      <span class="uxf-icon uxf-list" style="font-size: 3em;"></span>
-      <div>Add items to the list.</div>
+      <p>Add items to the list: Click 'Add link'.</p>
     </div>
   </ng-template>
+
 </ng-template>
 
-
-
-
-
-
-<!--
-
-<div class="loading-shade" *ngIf="saving">
-  <mat-progress-spinner mode="indeterminate" diameter="50"></mat-progress-spinner>
-</div>
-<ng-template #emptyList>
-  <div id="emptyList">
-    <span class="uxf-icon uxf-list" style="font-size: 3em;"></span>
-    <div>Add items to the list.</div>
-  </div>
-</ng-template>
-<div *ngIf="form">
-  <form [formGroup]="form">
-    <mat-divider></mat-divider>
-    <h2 class="subheading-1">External localization</h2>
-    <p>A template for searching in the External Localization part of the app can be created here</p>
-    <p>https://test.netpunkt.dk/search/work?search_block_form=term.default+adj+%22A+%C2%<b>A4concise+history+of+Finland</b>%22&page_id=danbib-search</p>
-    <section class="settings-section">
-      <label class="example-margin">Search Criteria</label>
-      <mat-radio-group formControlName="searchCriteria">
-        <mat-radio-button class="settings-control" value="ISBN">Isbn</mat-radio-button>
-        <mat-radio-button class="settings-control" value="TITLE">Title</mat-radio-button>
-        <mat-radio-button class="settings-control" value="MMS_ID">MmsId</mat-radio-button>
-      </mat-radio-group>
-    </section>
-    <section>
-      <mat-form-field matInput>
-        <mat-label>Start or url</mat-label>
-        <input matNativeControl formControlName="partOfUrlBeforeSearchCriteria" >
-      </mat-form-field>
-    </section>
-    <section>
-      <mat-form-field matInput>
-        <mat-label >End of url</mat-label>
-        <input matNativeControl formControlName="partOfUrlAfterSearchCriteria" >
-      </mat-form-field>
-    </section>
-    <mat-divider></mat-divider>
-    <h2 class="subheading-1">Additional settings</h2>
-    <section class="settings-section">
-      <label class="example-margin">Align:</label>
-      <mat-radio-group formControlName="pageSize">
-        <mat-radio-button class="settings-control" [value]="5">5</mat-radio-button>
-        <mat-radio-button class="settings-control" [value]="10">10</mat-radio-button>
-        <mat-radio-button class="settings-control" [value]="20">20</mat-radio-button>
-      </mat-radio-group>
-    </section>
-    <section class="settings-section">
-      <mat-checkbox labelPosition="before" formControlName="showValue">Show Value</mat-checkbox>
-    </section>
-  </form>
-  <pre *ngIf="form.get('showValue').value">{{ form.value | json }}</pre>
-</div>
--->
