--- a/cloudapp/src/app/external-localization/external-localization.component.html
+++ b/cloudapp/src/app/external-localization/external-localization.component.html
@@ -1,13 +1,15 @@
 <app-topmenu></app-topmenu>
-<p>Use the links following the titles below to search for the material externally </p>
-<div [ngClass]="'table'">
-  <div [ngClass]="'table-row'" *ngFor="let attributesFromAlmaEntry of attributesFromAlmaArray">
-    <!--      <div [ngClass]="'table-row'">-->
-    <p [ngClass]="'table-cell'">{{attributesFromAlmaEntry.getEntryNo()}}</p>
-    <p [ngClass]="'table-cell'" sty>{{attributesFromAlmaEntry.title | truncate : 20}}</p>
-<!--          <div [ngClass]="'table-row'">-->
-<!--            <div [ngClass]="'table-cell'"></div>-->
-    <div [ngClass]="'table-cell'">
+<div *ngIf="settings.items.length>0 else noExternalLinks">
+  <div *ngIf="attributesFromAlmaArray.length>0 else noEntities">
+    <p>Use the links following the titles below to search for the material externally </p>
+    <div [ngClass]="'table'">
+      <div [ngClass]="'table-row'" *ngFor="let attributesFromAlmaEntry of attributesFromAlmaArray">
+        <!--      <div [ngClass]="'table-row'">-->
+        <p [ngClass]="'table-cell'">{{attributesFromAlmaEntry.getEntryNo()}}</p>
+        <p [ngClass]="'table-cell'" sty>{{attributesFromAlmaEntry.title | truncate : 20}}</p>
+        <!--          <div [ngClass]="'table-row'">-->
+        <!--            <div [ngClass]="'table-cell'"></div>-->
+        <div [ngClass]="'table-cell'">
             <span *ngFor="let item of settings.items">
               <a *ngIf="item.searchCriteria=='1'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{attributesFromAlmaEntry.isbn}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
               <a *ngIf="item.searchCriteria=='2'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{attributesFromAlmaEntry.title}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
@@ -15,18 +17,22 @@
               <a *ngIf="item.searchCriteria=='4'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{attributesFromAlmaEntry.author}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
               <br>
             </span>
-      <!--          <mat-list *ngFor="let item of settings.items">-->
-      <!--            <mat-list-item>-->
-      <!--            </mat-list-item>-->
-      <!--          </mat-list>-->
+          <!--          <mat-list *ngFor="let item of settings.items">-->
+          <!--            <mat-list-item>-->
+          <!--            </mat-list-item>-->
+          <!--          </mat-list>-->
 
+        </div>
+        <!--      </div>-->
+      </div>
     </div>
-    <!--      </div>-->
   </div>
 </div>
-<div *ngIf="attributesFromAlmaArray.length>0 else noEntities">
-</div>
 
+<ng-template #noExternalLinks>
+  <span>You have not created any 'External link templates' in the settings section of this cloud app.</span><br>
+  <b><a href="/#/settings">Add external localization links</a></b>
+</ng-template>
 <ng-template #noEntities>
   Please navigate to a list.
 </ng-template>
