externalLinkAttributest now async piped from html

--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -8,6 +8,7 @@
 -->
   <p>This app is adding functionality essential for running The Royal Danish Library</p>
   <ul>
+    <li><a [routerLink]="['jj']">Test</a></li>
     <li><a [routerLink]="['external-localization']">External localization</a></li>
     <li><a [routerLink]="['update-request']">Update request data</a></li>
     <li><a [routerLink]="['external-localization']">Converting Lending to Borrowing</a></li>
