--- a/cloudapp/src/app/settings/settings.component.html
+++ b/cloudapp/src/app/settings/settings.component.html
@@ -21,6 +21,8 @@
         <mat-icon matListIcon (click)="remove(item)">delete</mat-icon>
       </mat-list-item>
     </mat-list>
+    <b><a href="/external-localization">Jump to external localization page.</a></b>
+
   </div>
 
   <ng-template #noItems>
