--- a/cloudapp/src/app/external-localization/external-localization.component.scss
+++ b/cloudapp/src/app/external-localization/external-localization.component.scss
@@ -11,9 +11,13 @@ div.table-row{
 }
 .table-cell {
   display: $tableCell;
-  padding-left: 0px;
+  padding-left: 0;
+  padding-right: 1em;
 }
 
+.table-cell a {
+  padding-right: 1em;
+}
 /*
 .mat-list-base {
   padding-top: 0px;
