--- a/cloudapp/src/app/external-localization/external-localization.component.html
+++ b/cloudapp/src/app/external-localization/external-localization.component.html
@@ -6,10 +6,10 @@
 <h3 *ngIf="pageLoading">Loading ...</h3>
 
 
-<ng-template #noExternalLinks>
+<div *ngIf="!settingsFound()">
     <span>You have not created any 'External link templates' in the settings section of this cloud app.</span><br>
     <b><a href="/#/settings">Add external localization links</a></b>
-</ng-template>
+</div>
 
 <ng-template #noEntities>
     <div *ngIf="!pageLoading">Please navigate to a list.</div>
@@ -21,17 +21,17 @@
         <p><b>Use the links following the titles below to search for the material externally.</b></p>
         <div [hidden]="false"  *ngFor="let externalLinkAttribute of externalLinkAttributes">
             <div  [ngClass]="'table-row'">
-                <span [ngClass]="'table-cell'">{{externalLinkAttribute.id+1 }}</span>
+                <span [ngClass]="'table-cell'">{{externalLinkAttribute.id }}</span>
                 <span [ngClass]="'table-cell'">{{externalLinkAttribute.title | truncate : 50}}</span>
             </div>
             <div [ngClass]="'table-row'">
                 <div [ngClass]="'table-cell'"></div>
                 <div [ngClass]="'table-cell'">
             <span *ngFor="let item of settings.items">
-              <a *ngIf="item.searchCriteria=='1'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{externalLinkAttributes.isbn}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
-              <a *ngIf="item.searchCriteria=='2'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{externalLinkAttributes.title}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
-              <a *ngIf="item.searchCriteria=='3'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{externalLinkAttributes.mms_id}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
-              <a *ngIf="item.searchCriteria=='4'" target="externalLocalization" href="{{item.partOfUrlBeforeSearchCriteria}}+{{externalLinkAttributes.author}}+{{item.partOfUrlAfterSearchCriteria}}">{{item.linkName}}</a>
+              <a *ngIf="item.searchCriteriaType=='1'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttributes.isbn}}+{{item.endOfLink}}">{{item.linkName}}</a>
+              <a *ngIf="item.searchCriteriaType=='2'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttributes.title}}+{{item.endOfLink}}">{{item.linkName}}</a>
+              <a *ngIf="item.searchCriteriaType=='3'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttributes.mms_id}}+{{item.endOfLink}}">{{item.linkName}}</a>
+              <a *ngIf="item.searchCriteriaType=='4'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttributes.author}}+{{item.endOfLink}}">{{item.linkName}}</a>
             </span>
                 </div>
             </div>
