--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -1,17 +1,7 @@
 <section>
-  <h1>
-    Home
-  </h1>
-<!--
-  <button class="btn btn-default" type="button">
-  <span aria-hidden="true" class="glyphicon glyphicon-star"></span>Star</button>
--->
+  <h1>Home</h1>
   <p>This app is adding functionality essential for running The Royal Danish Library</p>
   <ul>
-    <li><a [routerLink]="['jj']">Test</a></li>
     <li><a [routerLink]="['external-localization']">External localization</a></li>
-    <li><a [routerLink]="['update-request']">Update request data</a></li>
-    <li><a [routerLink]="['external-localization']">Converting Lending to Borrowing</a></li>
-    <li><a [routerLink]="['config']">Configuration</a></li>
   </ul>
 </section>
