--- a/cloudapp/src/app/external-localization/external-localization.component.html
+++ b/cloudapp/src/app/external-localization/external-localization.component.html
@@ -1,38 +1,28 @@
 <app-topmenu></app-topmenu>
-<!-- For testing
-<span *ngIf="!pageLoading">Page Loaded!</span><br>
-<span *ngIf="settingsLoaded else noExternalLinks"> {{settings.items.length}} settings loaded.</span><br><br>
--->
 <h3 *ngIf="pageLoading">Loading ...</h3>
 
-
-<div *ngIf="!settingsFound()">
+<div *ngIf="settings && settings.items.length===0">
     <span>You have not created any 'External link templates' in the settings section of this cloud app.</span><br>
     <b><a href="/#/settings">Add external localization links</a></b>
 </div>
 
-<ng-template #noEntities>
-    <div *ngIf="!pageLoading">Please navigate to a list.</div>
-</ng-template>
+<p *ngIf="!pageLoading && borrowningListCount == 0"><b>Please navigate to list of Borrowing requests</b></p>
+<p *ngIf="!pageLoading && borrowningListCount > 0"><b>Use the links following the titles below to search for the material externally.</b></p>
 
-    <div *ngIf="pageLoaded$ | async as externalLinkAttributes else noEntities" [ngClass]="'table'">
-        <div *ngIf="settingsFound()">
-        <!--All data is ready-->
-        <p><b>Use the links following the titles below to search for the material externally.</b></p>
-        <div [hidden]="false"  *ngFor="let externalLinkAttribute of externalLinkAttributes">
-            <div  [ngClass]="'table-row'">
-                <span [ngClass]="'table-cell'">{{externalLinkAttribute.id }}</span>
-                <span [ngClass]="'table-cell'">{{externalLinkAttribute.title | truncate : 50}}</span>
-            </div>
-            <div [ngClass]="'table-row'">
-                <div [ngClass]="'table-cell'"></div>
-                <div [ngClass]="'table-cell'">
+<div *ngIf="pageLoaded$ | async as externalLinkAttributes" [ngClass]="'table'">
+    <div [ngClass]="'table'" *ngFor="let externalLinkAttribute of externalLinkAttributes">
+        <div  [ngClass]="'table-row'">
+            <span [ngClass]="'table-cell'">{{externalLinkAttribute.id }}</span>
+            <span [ngClass]="'table-cell'">{{externalLinkAttribute.title | truncate : 50}}</span>
+        </div>
+        <div [ngClass]="'table-row'">
+            <div [ngClass]="'table-cell'"></div>
+            <div [ngClass]="'table-cell'">
             <span *ngFor="let item of settings.items">
-              <a *ngIf="item.searchCriteriaType=='1'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttributes.isbn}}+{{item.endOfLink}}">{{item.linkName}}</a>
-              <a *ngIf="item.searchCriteriaType=='2'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttributes.title}}+{{item.endOfLink}}">{{item.linkName}}</a>
-              <a *ngIf="item.searchCriteriaType=='4'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttributes.author}}+{{item.endOfLink}}">{{item.linkName}}</a>
+              <a matTooltip="Isbn: {{externalLinkAttribute.isbn}}" matTooltipShowDelay="1500" *ngIf="item.searchCriteriaType=='1'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttribute.isbn}}+{{item.endOfLink}}">{{item.linkName}}</a>
+              <a matTooltip="Title: {{externalLinkAttribute.title}}" matTooltipShowDelay="1500" *ngIf="item.searchCriteriaType=='2'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttribute.getEncodedTitle()}}+{{item.endOfLink}}">{{item.linkName}}</a>
+              <a matTooltip="Author: {{externalLinkAttribute.author}}" matTooltipShowDelay="1500" *ngIf="item.searchCriteriaType=='4'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttribute.author}}+{{item.endOfLink}}">{{item.linkName}}</a>
             </span>
-                </div>
             </div>
         </div>
     </div>
