App-contents now also loads correctly on opening after Alma-page loaded.

--- a/cloudapp/src/app/external-localization/external-localization.component.html
+++ b/cloudapp/src/app/external-localization/external-localization.component.html
@@ -3,7 +3,7 @@
 
 <div *ngIf="settings && settings.items.length===0">
     <span>You have not created any 'External link templates' in the settings section of this cloud app.</span><br>
-    <b><a href="/#/settings">Add external localization links</a></b>
+    <b><a href="/#/settings">Add external localization links</a></b><br><br>
 </div>
 
 <p *ngIf="!pageLoading && borrowningListCount == 0"><b>Please navigate to list of Borrowing requests</b></p>
