--- a/cloudapp/src/app/settings/settings.component.html
+++ b/cloudapp/src/app/settings/settings.component.html
@@ -1,17 +1,12 @@
 <app-topmenu>
   <div buttons>
-    <button mat-flat-button type="button" color="primary" (click)="openDialog()" [disabled]="dialogOpen">Add link</button>
+    <button mat-flat-button type="button" color="primary" (click)="openDialog()" [disabled]="dialogOpen">Add template</button>
   </div>
 </app-topmenu>
 
-<div class="loading-shade" *ngIf="loading else loaded">
-  <mat-progress-spinner mode="indeterminate" diameter="50"></mat-progress-spinner>
-</div>
-
-<ng-template #loaded>
   <h2 class="subheading-1">External localization settings</h2>
-  <div *ngIf="settings && settings.items.length>0 else noItems">
-    <mat-list *ngFor="let item of settings.items">
+  <div *ngIf="settings && settings.externalLinkTemplates.length>0 else noExternalLinkTemplates">
+    <mat-list *ngFor="let item of settings.externalLinkTemplates">
       <mat-list-item>
         <span>{{item.linkName}}</span>
 <!--  TODO: JJEG ExLibris Way(https://developers.exlibrisgroup.com/cloudapps/docs/style/#colors) - dosn't work.
@@ -21,14 +16,12 @@
       </mat-list-item>
     </mat-list>
     <b><a href="#/external-localization">Jump to external localization page.</a></b>
-
   </div>
 
-  <ng-template #noItems>
-    <div id="emptyList">
-      <p>Add items to the list: Click 'Add link'.</p>
-    </div>
-  </ng-template>
-
+<ng-template #noExternalLinkTemplates>
+  <div id="emptyList">
+    <p>Add templates to the list: Click 'Add template'.</p>
+  </div>
 </ng-template>
+
 
