First user-review by Kim Andersen. Mainly text editing.

--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <section>
   <h1>Home</h1>
-  <p>This app is adding functionality essential for running The Royal Danish Library</p>
+  <p>This app is adding tools for fullfilling Borrowing Requests</p>
   <ul>
     <li><a [routerLink]="['external-localization']">External localization</a></li>
   </ul>
