--- a/cloudapp/src/app/external-localization/external-localization.component.html
+++ b/cloudapp/src/app/external-localization/external-localization.component.html
@@ -1,8 +1,8 @@
 <app-topmenu></app-topmenu>
 
 <div *ngIf="!settingsExists() else showTable">
-    <span>You have not created any 'External link templates' in the settings section of this cloud app.</span><br>
-    <b><a href="/#/settings">Add external localization links</a></b><br><br>
+    <span>You have not created any 'Link templates' in the settings section of this cloud app.</span><br>
+    <b><a href="/#/settings">Add link templates</a></b><br><br>
 </div>
 
 <ng-template #showTable>
@@ -24,7 +24,7 @@
                 <div [ngClass]="'table-cell'"></div>
                 <div [ngClass]="'table-cell'">
                 <span *ngFor="let item of settings.externalLinkTemplates">
-                  <a matTooltip="Isbn: {{externalLinkAttribute.isbn}}" matTooltipShowDelay="1500" *ngIf="item.searchCriteriaType=='1'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttribute.isbn}}+{{item.endOfLink}}">{{item.linkName}}</a>
+                  <a matTooltip="Isbn: {{externalLinkAttribute.isbn}}" matTooltipShowDelay="1500" *ngIf="(externalLinkAttribute.isbn!='') && (item.searchCriteriaType=='1')" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttribute.isbn}}+{{item.endOfLink}}">{{item.linkName}}</a>
                   <a matTooltip="Title: {{externalLinkAttribute.title}}" matTooltipShowDelay="1500" *ngIf="item.searchCriteriaType=='2'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttribute.getEncodedTitle()}}+{{item.endOfLink}}">{{item.linkName}}</a>
                   <a matTooltip="Author: {{externalLinkAttribute.author}}" matTooltipShowDelay="1500" *ngIf="item.searchCriteriaType=='4'" target="externalLocalization" href="{{item.startOfLink}}+{{externalLinkAttribute.author}}+{{item.endOfLink}}">{{item.linkName}}</a>
                 </span>
