--- a/cloudapp/src/app/settings/settings-dialog/settings-dialog.component.html
+++ b/cloudapp/src/app/settings/settings-dialog/settings-dialog.component.html
@@ -1,30 +1,31 @@
-<h1 mat-dialog-title>Create new external search template</h1>
+<h1 mat-dialog-title>Create link template</h1>
 
 <div mat-dialog-content>
     <mat-icon class="info-icon" (click)="toggleShowExample()" color="primary">info</mat-icon>
     <div *ngIf="showExample">
-        <h2>Here you can create an external search template. The format is: [Start of link]<b>[Search Criteria Type]</b>[End of link(optional)]</h2>
         <mat-divider></mat-divider><br>
-        <h2>Example: </h2>
-        <p><b>Original link:</b> http://test.netpunkt.dk/search/work?search_block_form=term.default+adj+%22<b>hans%20og%20grete</b>%22&page_id=danbib-search</p>
-        <p><b>1. Start of link:</b> http://test.netpunkt.dk/search/work?search_block_form=term.default+adj+%22</p>
-        <p><b>2. Search criteria Type</b> (the part of the original link, you want Alma to provide): Title</p>
-        <p><b>3.End of link:</b> %22&page_id=danbib-search</p>
-        <mat-divider></mat-divider>
+        <span>To create a link template based upon this search made in danish Netpunkt test-database:</span><br>
+        <span>http://test.netpunkt.dk/search/work?search_block_form=term.default+adj+%22<b>hans%20og%20grete</b>%22&page_id=danbib-search</span><br>
+        <span>...you need to:</span><br><br>
+        <span><b>1. Supply Link template name:</b>This is used for labeling your search template</span><br>
+        <span><b>2. Insert Start of link:</b> http://test.netpunkt.dk/search/work?search_block_form=term.default+adj+%22</span><br>
+        <span><b>3. Choose Search Criteria Type</b> (the part of the original link, you want Alma to provide): Title</span><br>
+        <span><b>4. Insert End of link(Optional):</b> %22&page_id=danbib-search</span><br><br>
+        <mat-divider></mat-divider><br>
     </div>
     <br *ngIf="!showExample">
 
     <mat-form-field  id="linkName">
-        <mat-label>Template name</mat-label>
+        <mat-label><span *ngIf="showExample"><b>1. </b></span>Link template name</mat-label>
         <input matInput required [(ngModel)]="data.linkName" (change)="onChange()" [maxLength]="20">
     </mat-form-field><br>
 
     <mat-form-field class="linkPart">
-        <mat-label><span *ngIf="showExample"><b>1. </b></span>Start of link</mat-label>
+        <mat-label><span *ngIf="showExample"><b>2. </b></span>Start of link</mat-label>
         <input matInput required [(ngModel)]="data.startOfLink" (change)="onChange()">
     </mat-form-field><br>
 
-    <label class="example-margin"><span *ngIf="showExample"><b>2. </b></span>Search Criteria Type *</label><br>
+    <label class="example-margin"><span *ngIf="showExample"><b>3. </b></span>Search Criteria Type *</label><br>
     <mat-radio-group [(ngModel)]="data.searchCriteriaType" (change)="onChange()">
         <!--        <mat-radio-button class="settings-control" value="0">None</mat-radio-button><br>-->
         <mat-radio-button class="settings-control" value="1">Isbn</mat-radio-button><br>
@@ -33,7 +34,7 @@
     </mat-radio-group>
 
     <mat-form-field class="linkPart">
-        <mat-label><span *ngIf="showExample"><b>3. </b></span>End of link</mat-label>
+        <mat-label><span *ngIf="showExample"><b>4. </b></span>End of link</mat-label>
         <input matInput [(ngModel)]="data.endOfLink" (change)="onChange()">
     </mat-form-field>
 </div>
@@ -42,5 +43,5 @@
 
 <div mat-dialog-actions>
     <button mat-button (click)="onCloseClick()" color="secondary">Cancel</button>
-    <button mat-button [mat-dialog-close]="data" [disabled]="!readyForSaving" color="primary">Save template</button>
+    <button mat-button [mat-dialog-close]="data" [disabled]="!readyForSaving" color="primary">Save link template</button>
 </div>
