First user-review by Kim Andersen. Mainly text editing.

--- a/cloudapp/src/app/settings/settings-dialog/settings-dialog.component.html
+++ b/cloudapp/src/app/settings/settings-dialog/settings-dialog.component.html
@@ -27,7 +27,6 @@
 
     <label class="example-margin"><span *ngIf="showExample"><b>3. </b></span>Search Criteria Type *</label><br>
     <mat-radio-group [(ngModel)]="data.searchCriteriaType" (change)="onChange()">
-        <!--        <mat-radio-button class="settings-control" value="0">None</mat-radio-button><br>-->
         <mat-radio-button class="settings-control" value="1">Isbn</mat-radio-button><br>
         <mat-radio-button class="settings-control" value="2">Title</mat-radio-button><br>
         <mat-radio-button class="settings-control" value="3">Author</mat-radio-button><br>
@@ -39,7 +38,7 @@
     </mat-form-field>
 </div>
 
-<a *ngIf="readyForSaving != '' && this.data.searchCriteriaType>0" href="{{testlink}}" target="externalLocalization"><b>Test link</b></a>
+<a *ngIf="readyForSaving && this.data.searchCriteriaType>0" href="{{testlink}}" target="externalLocalization"><b>Test link</b></a>
 
 <div mat-dialog-actions>
     <button mat-button (click)="onCloseClick()" color="secondary">Cancel</button>
