--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -3,7 +3,7 @@
   <p>This app is adding tools for fullfilling Borrowing Requests</p>
   <ul>
     <li><a [routerLink]="['external-localization']">External localization</a></li>
-    <li><a [routerLink]="['multi-select']">Update and unassign</a></li>
+    <li><a [routerLink]="['convert-to-digital']">Convert Borrowing Request to Digital</a></li>
     <li><a [routerLink]="['multi-select']">Multi Select</a></li>
   </ul>
 </section>
